feat: add Tailwind CSS styling and layout for various views
- Implemented Tailwind CSS for styling across the application.
- Created a new style.css file to define base styles and theme colors.
- Developed DictionaryView, HomeView, LoginView, MapView, ProfileView, VariantSelection, and LessonView with responsive design.
- Added dialect selection functionality in VariantSelection.vue.
- Integrated speech synthesis for pronunciation in MapView and DictionaryView.
- Enhanced user experience with dynamic headers and progress indicators in learning views.
- Established a structured layout for displaying vocabulary and grammar in LevelView.
- Configured Vite and Tailwind CSS for project build and development.

--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,23 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+
+
+   /$$$$$$    /$$$$$$   /$$      /$$   /$$$$$$    /$$$$$$ 
+  /$$__  $$  /$$__  $$ | $$$    /$$$  /$$__  $$  /$$__  $$
+ | $$  \__/ | $$  \ $$ | $$$$  /$$$$ | $$  \__/ | $$  \ $$
+ |  $$$$$$  | $$$$$$$$ | $$ $$/$$ $$ |  $$$$$$  | $$$$$$$$
+  \____  $$ | $$__  $$ | $$  $$$| $$  \____  $$ | $$__  $$
+  /$$  \ $$ | $$  | $$ | $$\  $ | $$  /$$  \ $$ | $$  | $$
+ |  $$$$$$/ | $$  | $$ | $$ \/  | $$ |  $$$$$$/ | $$  | $$
+  \______/  |__/  |__/ |__/     |__/  \______/  |__/  |__/
+
+   /$$$$$$   /$$$$$$  /$$      /$$  /$$$$$$   /$$$$$$ 
+  /$$__  $$ /$$__  $$| $$$    /$$$ /$$__  $$ /$$__  $$
+ | $$  \__/| $$  \ $$| $$$$  /$$$$| $$  \__/| $$  \ $$
+ |  $$$$$$ | $$$$$$$$| $$ $$/$$ $$|  $$$$$$ | $$$$$$$$
+  \____  $$| $$__  $$| $$  $$$| $$ \____  $$| $$__  $$
+  /$$  \ $$| $$  | $$| $$\  $ | $$ /$$  \ $$| $$  | $$
+ |  $$$$$$/| $$  | $$| $$ \/  | $$|  $$$$$$/| $$  | $$
+  \______/ |__/  |__/|__/     |__/ \______/ |__/  |__/
+ ===== Cosas random, cubitos y manqueo excesivo =====
