--- a/f/package.json
+++ b/f/package.json
@@ -9,8 +9,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "lucide-vue-next": "^0.548.0",
     "pinia": "^3.0.2",
     "pinia-plugin-persistedstate": "^4.3.0",
+    "radix-vue": "^1.9.17",
     "vue": "^3.4.19",
     "vue-router": "^4.5.1"
   },
